--- a/config/config
+++ b/config/config
@@ -1,6 +1,6 @@
 include "config.path"
 
--- preload = "./examples/preload.lua"	-- run preload.lua before every lua service run
+preload = root .."game/preload.lua"	-- run preload.lua before every lua service run
 thread = 8
 logger = nil
 logpath = "."
